Refactor date display in index.pug

--- a/views/index.pug
+++ b/views/index.pug
@@ -6,4 +6,4 @@ block content
   each headline in headlines
     h2
       a(href=headline.url)= headline.title
-    p= headline.date.toISOString().slice(0, 10)
+    p= headline.date
